# deltae

./: .travis.yml  README.md  delta_testing.py  deltae.py  pyproject.toml  requirements.txt  rochester_data.csv  rochester_test.py
deltae/: __init__.py
tests/: create_test_functions.py  test_functions.py  test_version.py
