[tool.poetry]
name = "deltae"
version = "1.1.1"
description = "Deltae 2000 written in pure python. See README.md for more"
authors = ["Kaine Bruce <kaineyb@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaineyb/deltae"
homepage = "https://github.com/kaineyb/deltae"
keywords = ["color difference","colour difference", "delta e"]


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "*"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"